--- a/src/html/header.html
+++ b/src/html/header.html
@@ -1,19 +1,19 @@
-<header class="header">
+<header class="header" id='header'>
   <div class="header__container">
     <div class="header__item header__dropdown">
       <div class="header__dropdown-btn">Classes</div>
       <div class="header__dropdown-list">
-        <a class="header__dropdown-item" href='#'>Yoga</a>
+        <a class="header__dropdown-item" href='./yoga.html'>Yoga</a>
         <a class="header__dropdown-item" href='#'>TRX</a>
         <a class="header__dropdown-item" href='#'>Dance</a>
         <a class="header__dropdown-item" href='#'>Body Ballet</a>
       </div>
     </div>
-    <a href="#" class="header__item header__link">Packages</a>
-    <a href='#' class="header__logo">
+    <a href="./packages.html" class="header__item header__link">Packages</a>
+    <a href='./' class="header__logo">
       <img class='header__logo-img' src="./images/Logo.png" alt="logo">
     </a>
-    <a href="#" class="header__item header__link">About</a>
-    <a href="#" class="header__item header__link">Contacts</a>
+    <a href="./about.html" class="header__item header__link">About</a>
+    <a href="./contacts.html" class="header__item header__link">Contacts</a>
   </div>
 </header>
