--- a/src/index.html
+++ b/src/index.html
@@ -213,14 +213,14 @@
             By signing up, you consent to the
             processing of your personal data
           </p>
-          <div class="form-block__btn btn btnToTop btn-white">
+          <a class="form-block__btn btn btnToTop btn-white" href='#header'>
             <svg width="15" height="24" viewBox="0 0 15 24" fill="none" xmlns="http://www.w3.org/2000/svg">
               <path
                 d="M6.49745 4.03698L3.96032 5.77729L1.38162 9.1304L0.676679 8.88368L-7.10119e-07 7.75438L1.8272 5.06858L8.28475 -3.62138e-07L9.92574 2.12612L11.9358 4.70264L15 7.75438L14.576 8.99296L13.6167 9.1304L10.91 6.86684L8.50255 4.03533L8.12015 7.24769L8.72201 20.4366L8.50255 24L7.5 24L6.49745 23.3244L6.49745 20.1601L6.14997 10.2448L6.49745 4.03533L6.49745 4.03698Z"
                 fill="black" />
             </svg>
             Back to top
-          </div>
+          </a>
         </div>
       </section>
     </main>
