--- a/src/html/header.html
+++ b/src/html/header.html
@@ -15,5 +15,14 @@
     </a>
     <a href="./about.html" class="header__item header__link">About</a>
     <a href="./contacts.html" class="header__item header__link">Contacts</a>
+
+    <div class="header__item header__dropdown">
+      <div class="header__dropdown-btn">Eng</div>
+      <div class="header__dropdown-list">
+        <a class="header__dropdown-item" hreflang='eng'>Eng</a>
+        <a class="header__dropdown-item" hreflang='srp'>Srp</a>
+
+      </div>
+    </div>
   </div>
 </header>
