--- a/src/index.html
+++ b/src/index.html
@@ -4,18 +4,20 @@
 'title': 'Главная'
 })
 
+
 <body>
+  <div id="preloader"></div>
   <div class="wrapper">
     @@include('html/header.html')
 
     <main class="page">
       <section class="main main-bg">
         <div class="main__container">
-          <h1 class="main__headline">
+          <h1 class="main__headline" data-aos="fade-up">
             Wonder what your body
             is capable of?
           </h1>
-          <h4 class="main__subtitle">
+          <h4 class="main__subtitle" data-aos="fade-down">
             Let’s discover together
           </h4>
           <a href="" class="main__btn btn">
@@ -63,17 +65,17 @@
           </div>
         </div>
         <div class="services__bg-block">
-          <h2 class="services__headline">Find your fit</h2>
+          <h2 data-aos="fade-right" class="services__headline">Find your fit</h2>
         </div>
 
       </section>
       <section class="desc-block">
         <div class="desc-block__container">
-          <h3 class="desc-block__headline">
+          <h3 data-aos="fade-left" class="desc-block__headline">
             At ACT, we're more than just a fitness
             studio–we're your partners in progress.
           </h3>
-          <p class="desc-block__desc">
+          <p class="desc-block__desc" data-aos="fade-down">
             We're all about making each day a little brighter and healthier. Here, movement
             isn't just about exercise; it's about feeling energized and finding your own rhythm.
           </p>
@@ -125,45 +127,45 @@
       </section>
       <section class="title-block">
         <div class="title-block__container">
-          <h2 class="title-block__headline">
+          <h2 data-aos="fade-right" class="title-block__headline" data-aos="fade-right">
             Ready to set
             your rhythm?</h2>
-          <h4 class="title-block__subtitle">
+          <h4 class="title-block__subtitle" data-aos="fade-left">
             Start your journey today
           </h4>
         </div>
       </section>
       <section class="packages">
         <div class="packages__container">
-          <h2 class="packages__headline">Our packages</h2>
+          <h2 data-aos="fade-right" class="packages__headline">Our packages</h2>
           <div class="packages__list">
-            <a class="packages__item" href='#'>
+            <a class="packages__item" data-aos="fade-right" href='#'>
               <div class="packages__title">First class</div>
               <div class="packages__price">
                 Free
               </div>
             </a>
-            <a class="packages__item" href='#'>
+            <a class="packages__item" data-aos="fade-left" href='#'>
               <div class="packages__title">Single class</div>
               <div class="packages__price">
                 1800<span>RSD</span>
               </div>
             </a>
-            <a class="packages__item" href='#'>
+            <a class="packages__item" data-aos="fade-right" href='#'>
               <div class="packages__title">4 classes</div>
               <div class="packages__price">
                 6400<span>RSD</span>
                 <p>save 800</p>
               </div>
             </a>
-            <a class="packages__item" href='#'>
+            <a class="packages__item" data-aos="fade-left" href='#'>
               <div class="packages__title">8 classes</div>
               <div class="packages__price">12000
                 <span>RSD</span>
                 <p>save 2400</p>
               </div>
             </a>
-            <a class="packages__item" href='#'>
+            <a class="packages__item" data-aos="fade-right" href='#'>
               <div class="packages__title">12 classes</div>
               <div class="packages__price">
                 16800<span>RSD</span>
@@ -176,7 +178,7 @@
       <section class="info-block">
         <div class="info-block__top">
           <div class="info-block__container">
-            <h2 class="info-block__headline">
+            <h2 data-aos="fade-right" class="info-block__headline">
               <span>Healthy bar</span>
               Opening soon
             </h2>
@@ -195,10 +197,10 @@
       </section>
       <section class="title-block title-block--gradient">
         <div class="title-block__container">
-          <h2 class="title-block__headline">
+          <h2 data-aos="fade-right" class="title-block__headline" data-aos="fade-right">
             Want to create
             your ideal fitness routine?</h2>
-          <h4 class="title-block__subtitle">
+          <h4 class="title-block__subtitle" data-aos="fade-left">
             Let’s meet in your inbox!
           </h4>
         </div>
